--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "config": {
     "projectPath": "../../"
   },
-  "packagePath": "juego studios pvt ltd",
+  "packagePath": "mendix",
   "scripts": {
     "start": "pluggable-widgets-tools start:native",
     "build": "pluggable-widgets-tools build:native",
